# unity-mcp

./: .gitignore  CLAUDE.md  ERROR_REPORT.md  FixscriptableobjecPlan.md  INVALID_JSON_PROPERTIES_REPORT.md  JSON_PROPERTIES_ISSUE_REPORT.md  Material Verification Plan.md  README-DEV.md  README.md  commit.sh  docker-compose.yml  manifest.json  mcp_source.py  prune_tool_results.py
Server/: Dockerfile  README.md  custom_tool_service.py  custom_tools_manager.py  fastmcp_tool_registry.py  models.py  plugin_hub.py  plugin_registry.py  port_discovery.py  pyproject.toml  server.py  stdio_port_registry.py  telemetry.py  test_telemetry.py  unity_connection.py  unity_instance_middleware.py  unity_transport.py
Server/resources/: __init__.py  active_tool.py  editor_state.py  layers.py  menu_items.py  prefab_stage.py  project_info.py  selection.py  tags.py  tests.py  unity_instances.py  windows.py
Server/src/: main.py
Server/src/cli/: main.py
Server/src/core/: config.py
Server/src/services/: custom_tool_service.py
Server/src/transport/: plugin_hub.py  plugin_registry.py  (+2 more)
Server/tests/: conftest.py  test_batch_strip_prefix.py  test_cli.py  test_core_infrastructure_characterization.py  test_focus_nudge.py  test_manage_prefabs.py  test_transport_characterization.py
Server/tools/: __init__.py  execute_menu_item.py  list_unity_instances.py  manage_asset.py  manage_editor.py  manage_gameobject.py  manage_prefabs.py  manage_scene.py  manage_script.py  manage_shader.py  read_console.py  resource_tools.py  run_tests.py  script_apply_edits.py  set_active_instance.py
(+422 files in other folders)
